k8s/access.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: flask-contacts
